log
Fri 19 Aug 2022 02:08:59 PM UTC: 
 tests:  0|6
total_score: 0/70
7dc0c1a
Fri 19 Aug 2022 02:17:52 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:13: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |         list->size = 0;
      |             ^~
Compilation failed
ca5ae20
Fri 19 Aug 2022 02:20:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:13: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |         list->size = 1;
      |             ^~
Compilation failed
5708411
Fri 19 Aug 2022 02:20:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:13: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |         list->size = 0;
      |             ^~
Compilation failed
6c17b4e
Fri 19 Aug 2022 02:23:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
516becd
Fri 19 Aug 2022 02:35:04 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:17: error: implicit declaration of function ‘new’ [-Werror=implicit-function-declaration]
   40 |   Node * nodo = new(Pelicula);
      |                 ^~~
list.c:40:21: error: ‘Pelicula’ undeclared (first use in this function)
   40 |   Node * nodo = new(Pelicula);
      |                     ^~~~~~~~
list.c:40:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:10: error: unused variable ‘nodo’ [-Werror=unused-variable]
   40 |   Node * nodo = new(Pelicula);
      |          ^~~~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5110cf2
Fri 19 Aug 2022 02:35:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:17: error: implicit declaration of function ‘CreateNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   40 |   Node * nodo = CreateNode(Pelicula);
      |                 ^~~~~~~~~~
      |                 createNode
list.c:40:28: error: ‘Pelicula’ undeclared (first use in this function)
   40 |   Node * nodo = CreateNode(Pelicula);
      |                            ^~~~~~~~
list.c:40:28: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:10: error: unused variable ‘nodo’ [-Werror=unused-variable]
   40 |   Node * nodo = CreateNode(Pelicula);
      |          ^~~~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4c76047
Fri 19 Aug 2022 02:35:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:28: error: ‘Pelicula’ undeclared (first use in this function)
   40 |   Node * nodo = createNode(Pelicula);
      |                            ^~~~~~~~
list.c:40:28: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:10: error: unused variable ‘nodo’ [-Werror=unused-variable]
   40 |   Node * nodo = createNode(Pelicula);
      |          ^~~~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ef785a4
Fri 19 Aug 2022 02:38:07 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:28: error: ‘data’ undeclared (first use in this function)
   40 |   Node * nodo = createNode(data);
      |                            ^~~~
list.c:40:28: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
58fa1c5
Fri 19 Aug 2022 02:39:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:39:8: error: conflicting types for ‘firstList’; have ‘void *(List *, Node *)’ {aka ‘void *(struct List *, Node *)’}
   39 | void * firstList(List * list,Node * data) {
      |        ^~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:8:8: note: previous declaration of ‘firstList’ with type ‘void *(List *)’ {aka ‘void *(struct List *)’}
    8 | void * firstList(List * list);
      |        ^~~~~~~~~
test.c: In function ‘test_first_next’:
test.c:101:13: error: too few arguments to function ‘firstList’
  101 |     int*j = firstList(L);
      |             ^~~~~~~~~
In file included from test.c:5:
list.c:39:8: note: declared here
   39 | void * firstList(List * list,Node * data) {
      |        ^~~~~~~~~
test.c:122:9: error: too few arguments to function ‘firstList’
  122 |     j = firstList(L);
      |         ^~~~~~~~~
In file included from test.c:5:
list.c:39:8: note: declared here
   39 | void * firstList(List * list,Node * data) {
      |        ^~~~~~~~~
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e812472
Fri 19 Aug 2022 02:39:48 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:17: error: too few arguments to function ‘createNode’
   40 |   Node * nodo = createNode();
      |                 ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ed7ce38
Fri 19 Aug 2022 02:40:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:17: error: ‘new’ undeclared (first use in this function)
   40 |   Node * nodo = new;
      |                 ^~~
list.c:40:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e7144af
Fri 19 Aug 2022 02:40:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:28: error: expected expression before ‘void’
   40 |   Node * nodo = createNode(void *data);
      |                            ^~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
27ab16a
Fri 19 Aug 2022 02:40:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:29: error: ‘data’ undeclared (first use in this function)
   40 |   Node * nodo = createNode(*data);
      |                             ^~~~
list.c:40:29: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ea86232
Fri 19 Aug 2022 02:42:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:17: error: too few arguments to function ‘createNode’
   40 |   Node * nodo = createNode();
      |                 ^~~~~~~~~~
list.c:22:8: note: declared here
   22 | Node * createNode(void * data) {
      |        ^~~~~~~~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
52be3ec
Fri 19 Aug 2022 02:45:12 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:39:8: error: conflicting types for ‘firstList’; have ‘void *(List *, Node *)’ {aka ‘void *(struct List *, Node *)’}
   39 | void * firstList(List * list, Node * new) {
      |        ^~~~~~~~~
In file included from list.c:4,
                 from test.c:5:
list.h:8:8: note: previous declaration of ‘firstList’ with type ‘void *(List *)’ {aka ‘void *(struct List *)’}
    8 | void * firstList(List * list);
      |        ^~~~~~~~~
test.c: In function ‘test_first_next’:
test.c:101:13: error: too few arguments to function ‘firstList’
  101 |     int*j = firstList(L);
      |             ^~~~~~~~~
In file included from test.c:5:
list.c:39:8: note: declared here
   39 | void * firstList(List * list, Node * new) {
      |        ^~~~~~~~~
test.c:122:9: error: too few arguments to function ‘firstList’
  122 |     j = firstList(L);
      |         ^~~~~~~~~
In file included from test.c:5:
list.c:39:8: note: declared here
   39 | void * firstList(List * list, Node * new) {
      |        ^~~~~~~~~
list.c: In function ‘firstList’:
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8442109
Fri 19 Aug 2022 02:52:09 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
37f9e87
